[package]
name = "rustic-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
notify = "6.1.1"