[package]
name = "rustic-pages"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
comrak = "0.18.0"
grass = "0.13.1"
gray_matter = "0.2"
tera = "1"
chrono = "0.4.26"
