[package]
name = "rustic-pages"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
comrak = "0.18.0"
grass = "0.13.1"
gray_matter = "0.2"
tera = "1"
chrono = "0.4.26"
actix-web = "4"
actix-files = "0.6.2"
tokio = { version = "1.0.0", features = ["rt", "rt-multi-thread", "macros"] }
notify = "6.1.1"
toml = "0.8.1"
